Kubernetes/k8s-demo/k8s/mongo.yaml
# Deployment Section
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0
          ports:
            - containerPort: 27017
---
# Service Section
apiVersion: v1
kind: Service
metadata:
  name: mongo-service # an arbitrary name for the service
spec:
  selector:
    app: mongo # the label of the deployment
  ports:
    - protocol: TCP
      port: 27017 # the port of the service
      targetPort: 27017 # the port of the container in the deployment where the request is forwarded to
